Fri Dec 26 04:24:06 EST 2008  <baueran@gmail.com>

- src/minimise.ml: make marked_states recursive

Thu Dec 25 22:51:01 EST 2008  <baueran@gmail.com>

- src/minimise.ml: fix bug in find_new_marked: add (s1, s2) to marked
  states rather than the newly found state pairs
- ChangeLog, NEWS: reflect changes

Thu Dec 25 01:29:08 EST 2008  <baueran@gmail.com>

- Makefile, ChangeLog, NEWS: add release notes
- src/minimise.ml: add inline documentation

Tue Dec 23 06:19:03 EST 2008  <baueran@gmail.com>

- src/minimise.ml: new
- src/mutils.ml: add remove_doubles and explanation
- src/gutils.ml: add explanation
- src/putils.ml: add explanation
- src/config.ml: change version number
- src/fsmcrossprod.ml: use minimise.ml, add -m option

Thu Dec 18 03:29:20 EST 2008  <baueran@gmail.com>

- src/fsmcrossprod.ml: added merge_final function

Tue Aug  5 20:09:55 EST 2008  <baueran@gmail.com>

- README: small update

Wed Jul 23 09:21:31 EST 2008  <baueran@gmail.com>

- src/dot2fsm.ml: moved to src/tmp
- src/tmp/template.tml: added
- src/Makefile: reflect change

Tue Jul 22 20:03:51 EST 2008  <baueran@gmail.com>

- src/nevertofsm.ml: added normalise function
- src/fsmcrossprod.ml: made output conform better with dot-file format
  specification

Mon Jul 21 10:04:05 EST 2008  <baueran@gmail.com>

- src/dot2fsm.ml: added (not part of main distribution)
- src/Makefile: reflect new file
- src/putils.ml: in get_label, replaced extfind deltap "\"];" with
  extfind deltap "\"]"
- src/dot.ml: cosmetic clean-ups of parse2
- src/fsmcrossprod.ml: added a semicolon to transition output,
  added label attribute to state output

Sun Jul 20 17:24:16 EST 2008  <baueran@gmail.com>

- src/dot.ml: added
- src/fsmcrossprod.ml: include dot.ml

Thu Jul 17 13:37:32 EST 2008  <baueran@gmail.com>

- README: updated installation instructions
- Makefile: changed dist target

Wed Jul 16 19:51:56 EST 2008  <baueran@gmail.com>

- src/gutils.ml: fixed bug mentioned in previous commit message
